--- a/src/sass/modules/_button.scss
+++ b/src/sass/modules/_button.scss
@@ -1,5 +1,5 @@
 .button {
-    padding: 4px 6px 0;
+    padding: 2px 6px;
     margin: 0 4px 4px 0;
     display: inline-block;
     color: $c-white;
