--- a/src/sass/modules/_playlist-header.scss
+++ b/src/sass/modules/_playlist-header.scss
@@ -10,6 +10,7 @@
     position: absolute;
     top: 20px;
     left: 20px;
+    right: 20px;
     margin: 0;
 }
 
