--- a/src/sass/modules/_subscribe.scss
+++ b/src/sass/modules/_subscribe.scss
@@ -47,7 +47,7 @@
     -webkit-appearance: none;
     margin-right: 2px;
     border: 3px solid $c-black;
-    padding: 5px 7px 2px;
+    padding: 3px 7px 2px;
     border-radius: 0;
     color: rgba($c-black, .6);
     background-color: $c-white;
@@ -66,7 +66,7 @@
     background-color: transparent;
     font-weight: bold;
     cursor: pointer;
-    padding-top: 5px;
+    padding-top: 3px;
     padding-bottom: 2px;
     margin-bottom: 0;
 }
